--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,8 @@
 {
   "devDependencies": {
-    "nodemon": "^2.0.20",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodemon": "^2.0.20"
   },
   "scripts": {
     "start": "node index.js",
